# Classroom_modelling

./: .gitignore  CMakeLists.txt
assets/Chair_table/: Table_Chair_Nadika_map.mtl
assets/Teachers_table/: Table_Chair_Nadika.mtl
assets/Teachers_table/bigreko/: Table_Chair_Nadika.mtl
assets/dummy/: class_texture.mtl
assets/window/: window.mtl  window_final.mtl
inc/: camera.h
shaders/: main.vs  plane.fs  plane.vs
src/: check.cpp  check2.cpp  indexBuffer.hpp  main.cpp  model.hpp  vertexBuffer.cpp  vertexBuffer.hpp
